<resources>
    <string name="app_name">petty Cash</string>
    <string name="welcome_first">Welcome To </string>
    <string name="welcome_second">Petty Cash Management</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot Password ?</string>


    <string name="statistics">Statistics</string>
    <string name="closed">Closed</string>
    <string name="open">Open</string>
    <string name="pending">Pending Approval</string>
    <string name="basic_info">Basic Info</string>
    <string name="modified_on">Modified On</string>
    <string name="profile">Profile</string>
    <string name="transactions">Transactions</string>


    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="about_us">About us</string>
    <string name="logout">Lougout</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="create_transaction">Create New Transaction</string>

    <string name="date">Date</string>
    <string name="legal_entity">Legal Entity</string>
    <string name="business_unit">Business Unit</string>
    <string name="project">Project</string>
    <string name="department">department</string>
    <string name="petty_cash_id">Petty Cash Custodian ID</string>
    <string name="t">t</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_lagal">Select Legal Entity</string>
    <string name="select_business">Select Business Unit</string>
    <string name="select_project">Select Project</string>
    <string name="select_department">Select Department</string>
    <string name="vat">VAT</string>
    <string name="decription">Description</string>
    <string name="type_here">Type here...</string>


    <string name="add_more_line">Add More 1</string>
    <string name="save_and_close">Save and Close</string>
    <string name="add_line">Add Line</string>
    <string name="category">Category</string>
    <string name="choose">CHOOSE</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="price">Price (SAR)</string>
    <string name="amount">Amount (SAR)</string>
    <string name="invoice">Invoice Number</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="supplier_number">Supplier Name</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="vat_number">VAT Number</string>
    <string name="billed_to_customer">Billed to Customer</string>
    <string name="attachment">attachment</string>
    <string name="ser">SAR</string>
    <string name="submit">Submit</string>
    <string name="sar">(SAR)</string>
    <string name="add">ADD</string>
    <string name="expenditure_type">Expenditure Type</string>
    <string name="cbs_code">CBS Code</string>
    <string name="preview">Preview</string>
    <string name="status">Status</string>
    <string name="total_amount">Total Amount</string>
    <string name="incomplete">Incomplete</string>
    <string name="err_choose">YOU MUST CHOOSE AN ITEM</string>
    <string name="value_greater_then_zere_err">value shoulde be greater than zero</string>
    <string name="value_greater_then_zere_and_num_err">value should be numbers only and greater the zero </string>
    <string name="empty_err">please type the value</string>
    <string name="value_15_digits_err">vat number must be 15 digits</string>
    <string name="all_red_feild_required">All the red feild are required</string>
    <string name="incomplete_transactions_review">Incomplete Transaction History</string>
    <string name="approved_transactions_review">Approved Transaction History</string>
    <string name="under_approval_transactions_review">Under Approval Transaction History</string>
    <string name="view">View</string>
    <string name="withdraw">Withdraw</string>
    <string name="edit">Edit</string>


</resources>